Start including additional schema items
Start tables for coordinates, users, altitude. Update the api spec to
reflect that as well.
