# cmd/api/main.go
@@ -22,10 +22,16 @@ const (
 
 const schema = `
 CREATE EXTENSION IF NOT EXISTS "uuid-ossp";
-CREATE TABLE IF NOT EXISTS sessions(id UUID NOT NULL DEFAULT uuid_generate_v1(), 
-				    start_time timestamp, 
-			            end_time timestamp,
-				    CONSTRAINT session_pkey PRIMARY KEY(id));`
+DROP TABLE sessions;
+CREATE TABLE IF NOT EXISTS users(id UUID NOT NULL DEFAULT uuid_generate_v1(),
+				 username VARCHAR(32));
+CREATE TABLE IF NOT EXISTS sessions(id UUID NOT NULL DEFAULT uuid_generate_v1(),
+                                    user_id UUID, 
+				    start_time TIMESTAMP, 
+			            end_time TIMESTAMP,
+				    CONSTRAINT session_pkey PRIMARY KEY(id));
+CREATE TABLE IF NOT EXISTS coordinates(session_id UUID, latlon POINT, time TIMESTAMP);
+CREATE TABLE IF NOT EXISTS altitude(session_id UUID, alt FLOAT, time TIMESTAMP); `
 
 func main() {
 	db, err := initDatabase()
