# spec/api.yaml
@@ -46,9 +46,38 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Session"
+    delete:
+      summary: delete a session by id
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+            format: uuid
+          required: true
+      responses:
+        "204":
+          description: deleted
 
 components:
   schemas:
+    User:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+          x-oapi-codegen-extra-tags:
+            db: id
+        username:
+          type: string
+          x-oapi-codegen-extra-tags:
+            db: username
+    UserList:
+      type: array
+      items:
+        $ref: "#/components/schemas/User"
+
     Session:
       type: object
       properties:
@@ -69,7 +98,6 @@ components:
             db: end_time
       required:
       - start_time
-
     SessionList:
       type: array
       items:
